Use Java 22 with preview enabled. Add Vaadin Bom and Vavr dependencies.